fix: [CDS-77857]: Removing usage of ModelMappers from pipeline filters. (#52916)
* fix: [CDS-77857]: Removing usage of ModelMappers from pipeline filters.

* fix: [CDS-77857]: Removing usage of ModelMappers from pipeline filters.

* fix: [CDS-77857]: Removing usage of ModelMappers from pipeline filters.

* fix: [CDS-77857]: Removing usage of ModelMappers from pipeline filters.

* fix: [CDS-77857]: Removing usage of ModelMappers from pipeline filters.

* fix: [CDS-77857]: Removing usage of ModelMappers from pipeline filters.

* fix: [CDS-77857]: Removing usage of ModelMappers from pipeline filters.

* Formatting changes completed.

* Formatting changes completed.

* UT changes done.

* Adding custom builders.

* Adding custom builders.

* Adding custom builders.

* Adding custom builders.

* Adding custom builders.

---------

Co-authored-by: Aninditaa Chauhan <aninditaa.chauhan2harness.io>