@@ -10,16 +10,21 @@ package io.harness.template.mappers;
 import static io.harness.annotations.dev.HarnessTeam.CDC;
 import static io.harness.rule.OwnerRule.ARCHIT;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import static junit.framework.TestCase.assertEquals;
+import static junit.framework.TestCase.assertNotNull;
 
 import io.harness.CategoryTest;
 import io.harness.annotations.dev.OwnedBy;
 import io.harness.category.element.UnitTests;
+import io.harness.ng.core.common.beans.NGTag;
+import io.harness.ng.core.mapper.TagMapper;
+import io.harness.ng.core.template.TemplateEntityType;
 import io.harness.rule.Owner;
 import io.harness.template.resources.beans.TemplateFilterProperties;
 import io.harness.template.resources.beans.TemplateFilterPropertiesDTO;
 
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
@@ -38,24 +43,57 @@ public class TemplateFilterPropertiesMapperTest extends CategoryTest {
   @Test
   @Owner(developers = ARCHIT)
   @Category(UnitTests.class)
-  public void testWriteTemplateEntity() {
-    TemplateFilterPropertiesDTO filterPropertiesDTO =
-        TemplateFilterPropertiesDTO.builder().templateIdentifiers(Collections.singletonList("template1")).build();
-    TemplateFilterProperties filterProperties =
-        (TemplateFilterProperties) templateFilterPropertiesMapper.toEntity(filterPropertiesDTO);
-    assertThat(filterProperties).isNotNull();
-    assertThat(filterProperties.getTemplateIdentifiers()).isEqualTo(filterPropertiesDTO.getTemplateIdentifiers());
+  public void testTemplateFilterToEntity() {
+    TemplateFilterPropertiesDTO templateFilterPropertiesDTO =
+        TemplateFilterPropertiesDTO.builder()
+            .templateIdentifiers(List.of("abc"))
+            .templateNames(List.of("A"))
+            .templateEntityTypes(List.of(TemplateEntityType.PIPELINE_TEMPLATE))
+            .childTypes(List.of("child1"))
+            .description("desc")
+            .repoName("repo1")
+            .build();
+    templateFilterPropertiesDTO.setTags(Map.of("key1", "value1"));
+    TemplateFilterProperties templateFilterProperties =
+        (TemplateFilterProperties) templateFilterPropertiesMapper.toEntity(templateFilterPropertiesDTO);
+    assertNotNull(templateFilterProperties);
+    assertEquals(
+        templateFilterProperties.getTemplateIdentifiers(), templateFilterPropertiesDTO.getTemplateIdentifiers());
+    assertEquals(templateFilterProperties.getTemplateNames(), templateFilterPropertiesDTO.getTemplateNames());
+    assertEquals(
+        templateFilterProperties.getTemplateEntityTypes(), templateFilterPropertiesDTO.getTemplateEntityTypes());
+    assertEquals(templateFilterProperties.getChildTypes(), templateFilterPropertiesDTO.getChildTypes());
+    assertEquals(templateFilterProperties.getDescription(), templateFilterPropertiesDTO.getDescription());
+    assertEquals(templateFilterProperties.getRepoName(), templateFilterPropertiesDTO.getRepoName());
+    assertEquals(templateFilterProperties.getTags(), TagMapper.convertToList(templateFilterPropertiesDTO.getTags()));
+    assertEquals(templateFilterPropertiesDTO.getFilterType(), templateFilterProperties.getType());
   }
 
   @Test
   @Owner(developers = ARCHIT)
   @Category(UnitTests.class)
-  public void testWriteTemplateResponseDto() {
-    TemplateFilterProperties filterProperties =
-        TemplateFilterProperties.builder().templateNames(Collections.singletonList("templateName")).build();
+  public void testTemplateFilterWriteDto() {
+    TemplateFilterProperties templateFilterProperties =
+        TemplateFilterProperties.builder()
+            .templateIdentifiers(List.of("abc"))
+            .templateNames(List.of("A"))
+            .templateEntityTypes(List.of(TemplateEntityType.PIPELINE_TEMPLATE))
+            .childTypes(List.of("child1"))
+            .description("desc")
+            .repoName("repo1")
+            .build();
+    templateFilterProperties.setTags(List.of(NGTag.builder().key("key1").value("value1").build()));
     TemplateFilterPropertiesDTO templateFilterPropertiesDTO =
-        (TemplateFilterPropertiesDTO) templateFilterPropertiesMapper.writeDTO(filterProperties);
-    assertThat(templateFilterPropertiesDTO).isNotNull();
-    assertThat(templateFilterPropertiesDTO.getTemplateNames()).isEqualTo(filterProperties.getTemplateNames());
+        (TemplateFilterPropertiesDTO) templateFilterPropertiesMapper.writeDTO(templateFilterProperties);
+    assertNotNull(templateFilterPropertiesDTO);
+    assertEquals(
+        templateFilterPropertiesDTO.getTemplateIdentifiers(), templateFilterProperties.getTemplateIdentifiers());
+    assertEquals(templateFilterPropertiesDTO.getTemplateNames(), templateFilterProperties.getTemplateNames());
+    assertEquals(
+        templateFilterPropertiesDTO.getTemplateEntityTypes(), templateFilterProperties.getTemplateEntityTypes());
+    assertEquals(templateFilterPropertiesDTO.getChildTypes(), templateFilterProperties.getChildTypes());
+    assertEquals(templateFilterPropertiesDTO.getDescription(), templateFilterProperties.getDescription());
+    assertEquals(templateFilterPropertiesDTO.getRepoName(), templateFilterProperties.getRepoName());
+    assertEquals(templateFilterPropertiesDTO.getTags(), TagMapper.convertToMap(templateFilterProperties.getTags()));
   }
 }
